# Bob

./: .gitignore  Makefile  PLAN .md  README.md  RESEARCH.md  WRITEUP.md  prior-art.md  pyproject.toml
agent/: bob.py  ledger.py
data/: bob.db  generate_synthetic.py  validate_synthetic.py
data/synthetic/: athman.jsonl  brian.jsonl  wanjiku.jsonl
demo/: record_demo.py  smoke_test.py  terminal_ui.py
demo/recordings/: bob_demo.cast
eval/: parser_eval.py
knowledge/: fuliza.md  helb.md  mpesa_tariffs.md  savings_products.md  student_finance.md
tools/: ingest.py  knowledge_lookup.py  live_rates.py  query_tools.py  sms_parser.py  statement_parser.py
